Actions
Bug #9294
closedipqosconf: comparison between pointer and zero character constant
Start date:
2018-03-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
ipqosconf.c:4826:29: error: comparison between pointer and zero character constant [-Werror=pointer-compare] while (isspace(*st) && st != '\0') { ^~ ipqosconf.c:4826:26: note: did you mean to dereference the pointer? while (isspace(*st) && st != '\0') { ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f7819bf90ea3a779850c4502438d2b0e519b7941
commit f7819bf90ea3a779850c4502438d2b0e519b7941 Author: Toomas Soome <tsoome@me.com> Date: 2018-03-25T17:27:58.000Z 9294 ipqosconf: comparison between pointer and zero character constant Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Approved by: Gordon Ross <gwr@nexenta.com>
Actions