9294 ipqosconf: comparison between pointer and zero character constant Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Approved by: Gordon Ross <gwr@nexenta.com>